--- a/entrance-exams/mca/mca.html
+++ b/entrance-exams/mca/mca.html
@@ -5,12 +5,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="HPU MCA Entrance Exam Papers - Download previous year question papers for HP University MCA entrance exam. Get 2024 paper with exam pattern, syllabus and preparation tips.">
-    <title>HPU MCA Entrance Exam Papers | Previous Year Question Papers | HP Exam Hub</title>
+        content="Download HPU MCA Entrance Exam Papers 2024 - Get previous year question papers for Himachal Pradesh University MCA entrance exam with solutions, exam pattern, syllabus and preparation tips.">
+    <meta name="keywords" content="HPU MCA paper 2024, MCA entrance exam HPU, HP University MCA question paper, HPU MCA previous year papers, MCA entrance syllabus HPU">
+    <meta name="robots" content="index, follow">
+    <title>HPU MCA Entrance Exam Papers 2024 | Previous Year Question Papers | HP Exam Hub</title>
+    <link rel="canonical" href="https://www.hpexamhub.in/papers/entrance/hpu-mca" />
     <link rel="icon" href="/assets/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
+    
+    <!-- Schema.org markup for Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "EducationalOrganization",
+      "name": "HP Exam Hub",
+      "url": "https://www.hpexamhub.in",
+      "logo": "https://www.hpexamhub.in/assets/logo.png",
+      "sameAs": [
+        "https://www.facebook.com/hpexamhub",
+        "https://twitter.com/hpexamhub"
+      ]
+    }
+    </script>
 </head>
 
 <body class="bg-gray-100 text-gray-800 font-nunito">
@@ -21,8 +39,11 @@
     <!-- Hero Section -->
     <section class="bg-gradient-to-r from-blue-600 to-blue-800 text-white py-16 text-center">
         <div class="max-w-4xl mx-auto px-4">
-            <h1 class="text-4xl sm:text-5xl font-bold mb-4">HPU MCA Entrance Exam Papers</h1>
-            <p class="text-xl sm:text-2xl mb-6">Previous year question papers with exam pattern and syllabus</p>
+            <h1 class="text-4xl sm:text-5xl font-bold mb-4">HPU MCA Entrance Exam Papers 2024</h1>
+            <p class="text-xl sm:text-2xl mb-6">Download previous year question papers with solutions, exam pattern and complete syllabus</p>
+            <div class="bg-blue-700 inline-block px-4 py-2 rounded-lg">
+                <span class="font-bold">Latest:</span> HPU MCA 2024 Question Paper Available Now!
+            </div>
         </div>
     </section>
 
@@ -40,7 +61,7 @@
     <main class="max-w-7xl mx-auto px-4 py-12">
         <!-- Exam Pattern -->
         <section class="mb-12 bg-white rounded-xl shadow p-8">
-            <h2 class="text-2xl font-bold mb-6 text-blue-800 border-b pb-2">HPU MCA Entrance Exam Pattern</h2>
+            <h2 class="text-2xl font-bold mb-6 text-blue-800 border-b pb-2">HPU MCA 2024 Entrance Exam Pattern</h2>
             <div class="grid md:grid-cols-2 gap-8">
                 <div>
                     <h3 class="text-xl font-semibold mb-4 text-blue-700">Paper Structure</h3>
@@ -107,13 +128,18 @@
 
         <!-- Previous Year Papers -->
         <section class="mb-12">
-            <h2 class="text-2xl font-bold mb-6 text-blue-800 border-b pb-2">Previous Year Papers</h2>
+            <h2 class="text-2xl font-bold mb-6 text-blue-800 border-b pb-2">HPU MCA Previous Year Papers</h2>
+            
+            <!-- Introductory paragraph for SEO -->
+            <div class="mb-8 bg-blue-50 p-4 rounded-lg">
+                <p class="text-gray-700">Looking for <strong>HPU MCA entrance exam papers 2024</strong>? Here you can download the complete question paper of <strong>Himachal Pradesh University MCA entrance examination</strong> along with previous year papers. These papers will help you understand the <strong>exam pattern, difficulty level, and important topics</strong> for your MCA entrance preparation.</p>
+            </div>
 
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- 2024 Paper -->
                 <div class="bg-white border-2 border-green-200 rounded-lg p-6 hover:shadow-md transition">
                     <div class="flex justify-between items-start mb-4">
-                        <h3 class="text-xl font-bold text-green-800">2024 Paper</h3>
+                        <h3 class="text-xl font-bold text-green-800">HPU MCA 2024 Paper</h3>
                         <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">Available</span>
                     </div>
                     <div class="space-y-3">
@@ -132,7 +158,7 @@
                             </a>
                             <a href="https://archive.org/download/hpu-mca-2024-hpexamhub.in/HPU%20MCA%202024%20%28hpexamhub.in%29.pdf"
                                 class="block w-full bg-green-600 hover:bg-green-700 text-white text-center font-bold py-2 px-4 rounded-lg transition">
-                                Download Paper
+                                Download PDF
                             </a>
                         </div>
                     </div>
@@ -141,7 +167,7 @@
                 <!-- 2023 Paper -->
                 <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition">
                     <div class="flex justify-between items-start mb-4">
-                        <h3 class="text-xl font-bold text-gray-700">2023 Paper</h3>
+                        <h3 class="text-xl font-bold text-gray-700">HPU MCA 2023 Paper</h3>
                         <span class="bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-full">Coming Soon</span>
                     </div>
                     <div class="space-y-3">
@@ -165,7 +191,7 @@
                 <!-- 2022 Paper -->
                 <div class="bg-white border border-gray-200 rounded-lg p-6 hover:shadow-md transition">
                     <div class="flex justify-between items-start mb-4">
-                        <h3 class="text-xl font-bold text-gray-700">2022 Paper</h3>
+                        <h3 class="text-xl font-bold text-gray-700">HPU MCA 2022 Paper</h3>
                         <span class="bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-full">Coming Soon</span>
                     </div>
                     <div class="space-y-3">
@@ -190,14 +216,14 @@
 
         <!-- Syllabus Section -->
         <section class="mb-12 bg-blue-50 rounded-xl p-8">
-            <h2 class="text-2xl font-bold mb-6 text-blue-800">Detailed Syllabus</h2>
+            <h2 class="text-2xl font-bold mb-6 text-blue-800">HPU MCA 2024 Detailed Syllabus</h2>
             <div class="grid md:grid-cols-3 gap-6">
                 <!-- Section A -->
                 <div class="bg-white p-6 rounded-lg shadow">
                     <h3 class="text-lg font-bold mb-4 text-blue-700 border-b pb-2">Section A: General Aptitude</h3>
                     <ul class="list-disc pl-5 space-y-2 text-sm">
                         <li>Coding Decoding</li>
-                        <li>Puzzes</li>
+                        <li>Puzzles</li>
                         <li>Syllogism</li>
                         <li>Blood Relation</li>
                         <li>Calendar</li>
@@ -211,7 +237,7 @@
                 <div class="bg-white p-6 rounded-lg shadow">
                     <h3 class="text-lg font-bold mb-4 text-blue-700 border-b pb-2">Section B: Mathematics</h3>
                     <ul class="list-disc pl-5 space-y-2 text-sm">
-                        <li>Ratio's </li>
+                        <li>Ratio's</li>
                         <li>Percentage</li>
                         <li>HCF and LCM</li>
                         <li>Ages</li>
@@ -240,6 +266,68 @@
             </div>
         </section>
 
+        <!-- Preparation Tips -->
+        <section class="mb-12 bg-white rounded-xl shadow p-8">
+            <h2 class="text-2xl font-bold mb-6 text-blue-800">HPU MCA Entrance Preparation Tips</h2>
+            <div class="space-y-6">
+                <div class="flex items-start">
+                    <div class="bg-blue-100 text-blue-800 rounded-lg p-3 mr-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                        </svg>
+                    </div>
+                    <div>
+                        <h3 class="text-lg font-semibold mb-2">Solve Previous Year Papers</h3>
+                        <p class="text-gray-700">Practicing with <strong>HPU MCA previous year question papers</strong> like the 2024 paper will help you understand the exam pattern and identify important topics.</p>
+                    </div>
+                </div>
+                <div class="flex items-start">
+                    <div class="bg-blue-100 text-blue-800 rounded-lg p-3 mr-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                        </svg>
+                    </div>
+                    <div>
+                        <h3 class="text-lg font-semibold mb-2">Focus on Computer Awareness</h3>
+                        <p class="text-gray-700">Since <strong>60% of the HPU MCA paper</strong> is from Computer Awareness, give special attention to topics like Data Structures, DBMS, and Programming Concepts.</p>
+                    </div>
+                </div>
+                <div class="flex items-start">
+                    <div class="bg-blue-100 text-blue-800 rounded-lg p-3 mr-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                    </div>
+                    <div>
+                        <h3 class="text-lg font-semibold mb-2">Time Management</h3>
+                        <p class="text-gray-700">Practice solving the complete <strong>HPU MCA 2024 question paper</strong> within 90 minutes to improve your speed and accuracy.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- FAQ Section -->
+        <section class="bg-white rounded-xl shadow p-8">
+            <h2 class="text-2xl font-bold mb-6 text-blue-800">Frequently Asked Questions</h2>
+            <div class="space-y-4">
+                <div class="border-b pb-4">
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Is the HPU MCA 2024 question paper available for download?</h3>
+                    <p class="text-gray-700">Yes, you can download the complete <strong>HPU MCA entrance exam 2024 question paper</strong> from the link provided above in PDF format.</p>
+                </div>
+                <div class="border-b pb-4">
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">What is the exam pattern for HPU MCA entrance?</h3>
+                    <p class="text-gray-700">The <strong>HPU MCA exam pattern</strong> consists of 100 multiple-choice questions divided into three sections: General Aptitude (20 questions), Mathematics (20 questions), and Computer Awareness (60 questions).</p>
+                </div>
+                <div class="border-b pb-4">
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">How can I prepare for HPU MCA entrance exam?</h3>
+                    <p class="text-gray-700">The best preparation strategy includes: <br>
+                        1. Solving <strong>previous year HPU MCA papers</strong> <br>
+                        2. Focusing on Computer Awareness section <br>
+                        3. Practicing mathematical aptitude <br>
+                        4. Taking mock tests under timed conditions</p>
+                </div>
+            </div>
+        </section>
 
     </main>
 
