--- a/entrance-exams/mca/mca.html
+++ b/entrance-exams/mca/mca.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
         content="Download HPU MCA Entrance Exam Papers 2024 - Get previous year question papers for Himachal Pradesh University MCA entrance exam with solutions, exam pattern, syllabus and preparation tips.">
-    <meta name="keywords" content="HPU MCA paper 2024, MCA entrance exam HPU, HP University MCA question paper, HPU MCA previous year papers, MCA entrance syllabus HPU">
+    <meta name="keywords"
+        content="HPU MCA paper 2024, HPU MCA paper 2025, MCA entrance exam HPU, HP University MCA question paper, HPU MCA previous year papers, HPU MCA sample papers, HPU MCA solved papers, MCA entrance syllabus HPU, HPU MCA exam pattern, HPU MCA admission process, HPU MCA preparation tips">
     <meta name="robots" content="index, follow">
     <title>HPU MCA Entrance Exam Papers 2024 | Previous Year Question Papers | HP Exam Hub</title>
     <link rel="canonical" href="https://www.hpexamhub.in/papers/entrance/hpu-mca" />
@@ -14,7 +15,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
-    
+
     <!-- Schema.org markup for Google -->
     <script type="application/ld+json">
     {
@@ -40,7 +41,8 @@
     <section class="bg-gradient-to-r from-blue-600 to-blue-800 text-white py-16 text-center">
         <div class="max-w-4xl mx-auto px-4">
             <h1 class="text-4xl sm:text-5xl font-bold mb-4">HPU MCA Entrance Exam Papers 2024</h1>
-            <p class="text-xl sm:text-2xl mb-6">Download previous year question papers with solutions, exam pattern and complete syllabus</p>
+            <p class="text-xl sm:text-2xl mb-6">Download previous year question papers with solutions, exam pattern and
+                complete syllabus</p>
             <div class="bg-blue-700 inline-block px-4 py-2 rounded-lg">
                 <span class="font-bold">Latest:</span> HPU MCA 2024 Question Paper Available Now!
             </div>
@@ -124,17 +126,21 @@
                     </div>
                 </div>
             </div>
-        </section>  
+        </section>
 
 
 
         <!-- Previous Year Papers -->
         <section class="mb-12">
             <h2 class="text-2xl font-bold mb-6 text-blue-800 border-b pb-2">HPU MCA Previous Year Papers</h2>
-            
+
             <!-- Introductory paragraph for SEO -->
             <div class="mb-8 bg-blue-50 p-4 rounded-lg">
-                <p class="text-gray-700">Looking for <strong>HPU MCA entrance exam papers 2024</strong>? Here you can download the complete question paper of <strong>Himachal Pradesh University MCA entrance examination</strong> along with previous year papers. These papers will help you understand the <strong>exam pattern, difficulty level, and important topics</strong> for your MCA entrance preparation.</p>
+                <p class="text-gray-700">Looking for <strong>HPU MCA entrance exam papers 2024</strong>? Here you can
+                    download the complete question paper of <strong>Himachal Pradesh University MCA entrance
+                        examination</strong> along with previous year papers. These papers will help you understand the
+                    <strong>exam pattern, difficulty level, and important topics</strong> for your MCA entrance
+                    preparation.</p>
             </div>
 
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -214,14 +220,14 @@
                     </div>
                 </div>
             </div>
-        </section> 
+        </section>
 
 
 
 
 
 
-                <!-- Syllabus Section -->
+        <!-- Syllabus Section -->
         <section class="mb-12 bg-blue-50 rounded-xl p-8">
             <h2 class="text-2xl font-bold mb-6 text-blue-800">HPU MCA 2024 Detailed Syllabus</h2>
             <div class="grid md:grid-cols-3 gap-6">
@@ -281,35 +287,46 @@
             <div class="space-y-6">
                 <div class="flex items-start">
                     <div class="bg-blue-100 text-blue-800 rounded-lg p-3 mr-4">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
                         </svg>
                     </div>
                     <div>
                         <h3 class="text-lg font-semibold mb-2">Solve Previous Year Papers</h3>
-                        <p class="text-gray-700">Practicing with <strong>HPU MCA previous year question papers</strong> like the 2024 paper will help you understand the exam pattern and identify important topics.</p>
+                        <p class="text-gray-700">Practicing with <strong>HPU MCA previous year question papers</strong>
+                            like the 2024 paper will help you understand the exam pattern and identify important topics.
+                        </p>
                     </div>
                 </div>
                 <div class="flex items-start">
                     <div class="bg-blue-100 text-blue-800 rounded-lg p-3 mr-4">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
                         </svg>
                     </div>
                     <div>
                         <h3 class="text-lg font-semibold mb-2">Focus on Computer Awareness</h3>
-                        <p class="text-gray-700">Since <strong>60% of the HPU MCA paper</strong> is from Computer Awareness, give special attention to topics like Data Structures, DBMS, and Programming Concepts.</p>
+                        <p class="text-gray-700">Since <strong>60% of the HPU MCA paper</strong> is from Computer
+                            Awareness, give special attention to topics like Data Structures, DBMS, and Programming
+                            Concepts.</p>
                     </div>
                 </div>
                 <div class="flex items-start">
                     <div class="bg-blue-100 text-blue-800 rounded-lg p-3 mr-4">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                         </svg>
                     </div>
                     <div>
                         <h3 class="text-lg font-semibold mb-2">Time Management</h3>
-                        <p class="text-gray-700">Practice solving the complete <strong>HPU MCA 2024 question paper</strong> within 90 minutes to improve your speed and accuracy.</p>
+                        <p class="text-gray-700">Practice solving the complete <strong>HPU MCA 2024 question
+                                paper</strong> within 90 minutes to improve your speed and accuracy.</p>
                     </div>
                 </div>
             </div>
@@ -320,15 +337,21 @@
             <h2 class="text-2xl font-bold mb-6 text-blue-800">Frequently Asked Questions</h2>
             <div class="space-y-4">
                 <div class="border-b pb-4">
-                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Is the HPU MCA 2024 question paper available for download?</h3>
-                    <p class="text-gray-700">Yes, you can download the complete <strong>HPU MCA entrance exam 2024 question paper</strong> from the link provided above in PDF format.</p>
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Is the HPU MCA 2024 question paper available
+                        for download?</h3>
+                    <p class="text-gray-700">Yes, you can download the complete <strong>HPU MCA entrance exam 2024
+                            question paper</strong> from the link provided above in PDF format.</p>
                 </div>
                 <div class="border-b pb-4">
-                    <h3 class="text-lg font-semibold mb-2 text-blue-700">What is the exam pattern for HPU MCA entrance?</h3>
-                    <p class="text-gray-700">The <strong>HPU MCA exam pattern</strong> consists of 100 multiple-choice questions divided into three sections: General Aptitude (20 questions), Mathematics (20 questions), and Computer Awareness (60 questions).</p>
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">What is the exam pattern for HPU MCA entrance?
+                    </h3>
+                    <p class="text-gray-700">The <strong>HPU MCA exam pattern</strong> consists of 100 multiple-choice
+                        questions divided into three sections: General Aptitude (20 questions), Mathematics (20
+                        questions), and Computer Awareness (60 questions).</p>
                 </div>
                 <div class="border-b pb-4">
-                    <h3 class="text-lg font-semibold mb-2 text-blue-700">How can I prepare for HPU MCA entrance exam?</h3>
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">How can I prepare for HPU MCA entrance exam?
+                    </h3>
                     <p class="text-gray-700">The best preparation strategy includes: <br>
                         1. Solving <strong>previous year HPU MCA papers</strong> <br>
                         2. Focusing on Computer Awareness section <br>
