--- a/entrance-exams/jbt/jbt.html
+++ b/entrance-exams/jbt/jbt.html
@@ -145,7 +145,7 @@
                             <span class="font-medium">100</span>
                         </div>
                         <div class="pt-4 space-y-2">
-                            <a href="/jbt-papers/jbt-2025.html" target="_blank"
+                            <a href="entrance-exams/jbt/jbt-papers/jbt-2025.html" target="_blank"
                                 class="block w-full bg-blue-600 hover:bg-blue-700 text-white text-center font-bold py-2 px-4 rounded-lg transition">
                                 Attempt Paper
                             </a>
