--- a/entrance-exams/jbt/jbt.html
+++ b/entrance-exams/jbt/jbt.html
@@ -363,28 +363,32 @@
             <h2 class="text-2xl font-bold mb-6 text-blue-800">HP JBT 2024 - Frequently Asked Questions</h2>
             <div class="space-y-4">
                 <div class="border-b pb-4">
-                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Q 1. What is the minimum qualifying marks for HP
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Q 1. What is the minimum qualifying marks for
+                        HP
                         JBT?</h3>
                     <p class="text-gray-700">For general category candidates, the expected cutoff for government
                         colleges is <strong>70-75 marks</strong> while for private colleges it's around <strong>45-65
                             marks</strong>. Reserved category candidates get relaxation as per government norms.</p>
                 </div>
                 <div class="border-b pb-4">
-                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Q 2. How many attempts are allowed for HP JBT exam?
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Q 2. How many attempts are allowed for HP JBT
+                        exam?
                     </h3>
                     <p class="text-gray-700">There is <strong>no limit on number of attempts</strong> for HP JBT exam as
                         long as you meet the age criteria (minimum 18 years) and educational qualification (10+2 with
                         50% marks).</p>
                 </div>
                 <div class="border-b pb-4">
-                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Q 3. What is the salary after completing JBT course?
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Q 3. What is the salary after completing JBT
+                        course?
                     </h3>
                     <p class="text-gray-700">After getting government job as JBT teacher, the <strong>starting salary is
                             approximately ₹25,000-30,000 per month</strong> (Level-5 as per 7th Pay Commission) which
                         increases with experience and promotions.</p>
                 </div>
                 <div class="border-b pb-4">
-                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Q 4. Is there any interview after written exam?</h3>
+                    <h3 class="text-lg font-semibold mb-2 text-blue-700">Q 4. Is there any interview after written exam?
+                    </h3>
                     <p class="text-gray-700">No, the <strong>selection is purely based on written exam merit</strong>.
                         There is no interview process for HP JBT admission.</p>
                 </div>
