--- a/entrance-exams/jbt/jbt-papers/jbt-2025.html
+++ b/entrance-exams/jbt/jbt-papers/jbt-2025.html
@@ -496,7 +496,7 @@
 
     <script>
         // Configuration - Update this path to your JSON file location
-        const JSON_DATA_URL = './test-data.json'; // Change this to your GitHub raw URL
+        const JSON_DATA_URL = 'pyq-2025.json'; // Change this to your GitHub raw URL
 
         // Test state management
         let testData = null;
